--- a/style.css
+++ b/style.css
@@ -1,12 +1,38 @@
 *{
-    margin: 0 ;
-    padding: 0;}
-.cabecalho {background-color: rgb(172, 43, 3);
+margin: 0;
+padding: o;
+}
+.cabecalho{background-color: rgb(216, 0, 0);
 display: flex;
-justify-content: space-around;} 
-.cabecalho-imagem{width: 10%}
-.cabecalho lista de itens{
-    display: inline-block;
-    margin: 0 16px;
+justify-content: space-around;
+ padding: 24px 0;
+}
+.cabecalho-imagem
+{
+    width: 50%;
 }
 
+ li
+ { 
+ display: inline-block;
+margin: 0 16px;
+padding: 68px 0;
+}
+h1{}
+
+.escola-imagem{
+        width: 20%;
+}
+.escola{
+    background-image: linear-gradient(rgb(197, 5, 5),black);
+    color:rgb(120, 153, 167);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+} 
+.escola-conteudo
+{widht: 50%;
+    }
+    .escola-titulo
+    {padding: 50px 30px;}
