--- a/style.css
+++ b/style.css
@@ -1,65 +1,85 @@
-*{
-margin: 0;
-padding: o;
-}
-.cabecalho{background-color: rgb(216,0 , 0);
-display: flex;
-justify-content: space-around;
- padding: 24px 0;
-}
-.cabecalho-imagem
-{
-    width: 50%;
-}
+:root{
 
- li
- { 
- display: inline-block;
-margin: 0 16px;
-padding: 68px 0;
-}
-h1{}
 
-.escola-imagem{
-        width: 20%;
+    --cor-de-fundo: #1E1E1E;
+    --verde: #6FFF57;
+    --branco: #FFFFFF;
+    --botao-ativo: #3A375E;
+    --botao-inativo: rgba(58, 55, 94, 0.5);
+--texto-fundo: rgba(58, 55, 94, 0.3);
 }
-.escola{
-    background-image: linear-gradient(rgb(216, 0, 0),black);
-    color:rgb(235, 222, 222);
-    display:flex;
+.conteudo-principal {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 24px 0;
-} 
-.escola-conteudo
-{width: 50%  }
-
-    .escola-titulo
-    {padding: 50px 30px;}
-
-    .aluno-um {
-        width: 30%;
-        height: 120px;
-    }
-    .estudante-icone
-    {width: 24px;}
-
-    .estudante-div{
-        text-align: center;
-
-    }
-    body{ font-family: Georgia, 'Times New Roman', Times, serif;}
-.aluno-titulo
-{
-    text-align: center;
-    padding: 50px 0;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
 }
-.estudante-todos{
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25% 25%;
+
+.titulo-principal {
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+    color: var(--verde);
+  
+}
+.botao{
+    font-family: "Crakra Petch", sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
+}
+
+.botoes {
+    display: block;
+}
+
+@media screen and (min-width: 768px) {
+    .botoes {
+        display: flex;
+    }
+}
+
+.botao:first-child {
+    border-radius: 40px 40px 0 0;
+}
+
+
+.botoes {
+    display: block;
+}
+
+@media screen and (min-width: 768px) 
+    .botoes {
+        display: flex;
+    }
+    .ativo{
+        background-color: var(--botao-ativo);
+        border-bottom: 4px solid var(--verde);
+        }
+
+        
+
+
+
+
+
+
+
     
-}
-footer{
-    background-color: black;
-    color: black;
-}
+
+
+
+
+
